--- a/app/src/main/res/layout/pokedex.xml
+++ b/app/src/main/res/layout/pokedex.xml
@@ -6,21 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
-    <Button
-        android:id="@+id/open_pokedex"
-        style="@android:style/Widget.Material.Button.Colored"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="128dp"
-        android:background="#000000"
-        android:backgroundTint="#DDFF0000"
-        android:backgroundTintMode="src_in"
-        android:stateListAnimator="@android:anim/fade_in"
-        android:text="@string/pokedex"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:typeface="sans"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="64dp"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
