--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,27 +14,30 @@
         android:id="@+id/main_button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="143dp"
         android:layout_marginTop="292dp"
         android:text="@string/login"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="143dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="63dp"
+        android:layout_marginStart="112dp"
         android:layout_marginTop="154dp"
         android:gravity="center"
         android:text="@string/guest"
-        app:layout_constraintTop_toBottomOf="@+id/button1"
-        tools:layout_editor_absoluteX="112dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="158dp"
         android:layout_height="63dp"
+        android:layout_marginStart="126dp"
         android:layout_marginTop="20dp"
         android:text="@string/signin"
-        app:layout_constraintTop_toBottomOf="@+id/main_button2"
-        tools:layout_editor_absoluteX="126dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_button2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
